test/types/string/bradc/substring/substringBadRange3.good
substringBadRange3.chpl:3: error: halt reached - tring to slice a string with a range of size 0
