test/types/string/bradc/substring/substringBadRange3.chpl
var str = "abcdefghijklm";

writeln("str[3..2] = ", str[3..2]);
